--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -13,6 +13,10 @@
 
     <properties>
         <docs.resources.version>0.2.5</docs.resources.version>
+        <rootDir>${basedir}/../..</rootDir>
+        <!-- These versions aren't exposed even thought they are import from spring-boot-dependencies -->
+        <spring-integration.version>6.1.0</spring-integration.version>
+        <hazelcast.version>5.2.3</hazelcast.version>
     </properties>
     <repositories>
         <repository>
@@ -372,14 +376,52 @@
                                 </goals>
                                 <phase>prepare-package</phase>
                                 <configuration>
+                                    <additionalDependencies>
+                                        <dependency>
+                                            <groupId>com.amazonaws</groupId>
+                                            <artifactId>aws-java-sdk-dynamodb</artifactId>
+                                            <version>${aws-java-sdk.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>org.apache.curator</groupId>
+                                            <artifactId>curator-framework</artifactId>
+                                            <version>${curator.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>org.apache.curator</groupId>
+                                            <artifactId>curator-client</artifactId>
+                                            <version>${curator.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>org.springframework.integration</groupId>
+                                            <artifactId>spring-integration-hazelcast</artifactId>
+                                            <version>${spring-integration-hazelcast.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>org.springframework.integration</groupId>
+                                            <artifactId>spring-integration-zookeeper</artifactId>
+                                            <version>${spring-integration.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>jakarta.jms</groupId>
+                                            <artifactId>jakarta.jms-api</artifactId>
+                                            <version>${jakarta-jms.version}</version>
+                                        </dependency>
+                                        <dependency>
+                                            <groupId>com.hazelcast</groupId>
+                                            <artifactId>hazelcast</artifactId>
+                                            <version>${hazelcast.version}</version>
+                                        </dependency>
+                                    </additionalDependencies>
                                     <includeDependencySources>true</includeDependencySources>
                                     <dependencySourceIncludes>
                                         <dependencySourceInclude>org.springframework.cloud.stream.app:*</dependencySourceInclude>
                                         <dependencySourceInclude>org.springframework.cloud.fn:*</dependencySourceInclude>
                                     </dependencySourceIncludes>
+
                                     <attach>false</attach>
-                                    <quiet>true</quiet>
-                                    <doclint>none</doclint>
+                                    <quiet>false</quiet>
+                                    <debug>true</debug>
                                     <stylesheetfile>${basedir}/src/main/javadoc/spring-javadoc.css</stylesheetfile>
                                     <links>
                                         <link>
@@ -390,36 +432,6 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <version>3.3.0</version>
-                        <executions>
-                            <execution>
-                                <id>unpack-doc-resources</id>
-                                <goals>
-                                    <goal>unpack-dependencies</goal>
-                                </goals>
-                                <phase>generate-resources</phase>
-                                <configuration>
-                                    <includeGroupIds>io.spring.docresources</includeGroupIds>
-                                    <includeArtifactIds>spring-doc-resources</includeArtifactIds>
-                                    <includeTypes>zip</includeTypes>
-                                    <excludeTransitive>true</excludeTransitive>
-                                    <outputDirectory>${project.build.directory}/refdocs/</outputDirectory>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>io.spring.docresources</groupId>
-                                <artifactId>spring-doc-resources</artifactId>
-                                <version>${docs.resources.version}</version>
-                                <type>zip</type>
-                            </dependency>
-                        </dependencies>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -447,16 +459,20 @@
                     <plugin>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <version>2.2.2</version>
+                        <version>2.2.4</version>
                         <dependencies>
                             <dependency>
                                 <groupId>org.asciidoctor</groupId>
                                 <artifactId>asciidoctorj-pdf</artifactId>
-                                <version>2.3.4</version>
+                                <version>2.3.7</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>io.spring.asciidoctor.backends</groupId>
+                                <artifactId>spring-asciidoctor-backends</artifactId>
+                                <version>0.0.5</version>
                             </dependency>
                         </dependencies>
                         <executions>
-
                             <execution>
                                 <id>html</id>
                                 <phase>generate-resources</phase>
@@ -464,7 +480,7 @@
                                     <goal>process-asciidoc</goal>
                                 </goals>
                                 <configuration>
-                                    <backend>html5</backend>
+                                    <backend>spring-html</backend>
                                     <sourceHighlighter>highlight.js</sourceHighlighter>
                                     <outputDirectory>${project.build.directory}/contents/reference/html
                                     </outputDirectory>
@@ -479,6 +495,7 @@
                                         <stylesheet>spring.css</stylesheet>
                                         <highlightjsdir>js/highlight</highlightjsdir>
                                         <highlightjs-theme>github</highlightjs-theme>
+                                        <stream-apps-folder>${rootDir}</stream-apps-folder>
                                     </attributes>
                                 </configuration>
                             </execution>
@@ -494,6 +511,9 @@
 
                                     <outputDirectory>${project.build.directory}/contents/reference/pdf</outputDirectory>
                                     <sourceHighlighter>coderay</sourceHighlighter>
+                                    <attributes>
+                                        <stream-apps-folder>${rootDir}</stream-apps-folder>
+                                    </attributes>
                                 </configuration>
                             </execution>
 
@@ -511,6 +531,9 @@
                                 <toclevels>4</toclevels>
                                 <numbered>true</numbered>
                                 <baseDir>${project.basedir}</baseDir>
+                                <stream-apps-folder>${rootDir}</stream-apps-folder>
+                                <scst-core-version>${spring-cloud-stream-dependencies.version}</scst-core-version>
+                                <spring-core-version>${spring.version}</spring-core-version>
                             </attributes>
                         </configuration>
                     </plugin>
@@ -597,7 +620,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
-                        <version>1.9.1</version>
+                        <version>3.4.0</version>
                         <executions>
                             <execution>
                                 <id>attach-zip</id>
@@ -610,7 +633,7 @@
                                             <file>
                                                 ${project.build.directory}/${project.artifactId}-${project.version}.zip
                                             </file>
-                                            <type>zip;zip.type=docs;zip.deployed=false</type>
+                                            <type>zip</type>
                                         </artifact>
                                     </artifacts>
                                 </configuration>
