--- a/functions/supplier/debezium-supplier/pom.xml
+++ b/functions/supplier/debezium-supplier/pom.xml
@@ -136,6 +136,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
+                    <threadCount>1</threadCount>
+                    <forkCount>1</forkCount>
                     <groups>integration</groups>
                 </configuration>
             </plugin>
