--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -156,8 +156,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <parallel>classes</parallel>
-                    <forkCount>${mavenThreads}</forkCount>
+                    <threadCount>1</threadCount>
+                    <forkCount>1</forkCount>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
             </plugin>
@@ -334,8 +334,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
-                            <parallel>classes</parallel>
-                            <forkCount>${mavenThreads}</forkCount>
+                            <threadCount>1</threadCount>
+                            <forkCount>1</forkCount>
                             <excludedGroups>integration</excludedGroups>
                         </configuration>
                     </plugin>
@@ -351,8 +351,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven-surefire-plugin.version}</version>
                         <configuration>
-                            <parallel>classes</parallel>
-                            <forkCount>${mavenThreads}</forkCount>
+                            <threadCount>1</threadCount>
+                            <forkCount>1</forkCount>
                             <groups>integration</groups>
                         </configuration>
                     </plugin>
