--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -137,9 +137,11 @@ jobs:
       processors: ${{ env.PROCESSORS }}
       matrix: ${{ env.matrix }}
       build_version: ${{ env.BUILD_VERSION }}
+      release_train_version: ${{ env.RELEASE_TRAIN_VERSION }}
       build_version_type: ${{ env.BUILD_VERSION_TYPE }}
       is_version_change: ${{ env.IS_VERSION_CHANGE }}
       next_dev_version: ${{ env.NEXT_DEV_VERSION }}
+      release_train_next_dev_version: ${{ env.RELEASE_TRAIN_NEXT_DEV_VERSION }}
       jdk_build: ${{ env.JDK_BUILD }}
       jre_version: ${{ env.JRE_DEFAULT }}
   core:
@@ -195,8 +197,8 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}"                        
+            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}" "${{ needs.parameters.outputs.release_train_build_version }}"                         
             echo "::notice ::checking updated versions"
             set +e
             MESSAGE=$($ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }})
@@ -321,8 +323,8 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}"                        
+            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}" "${{ needs.parameters.outputs.release_train_build_version }}"                        
             echo "::notice ::checking updated versions"
             set +e
             MESSAGE=$($ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }})
@@ -421,8 +423,8 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}"                        
+            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}" "${{ needs.parameters.outputs.release_train_build_version }}"                        
             echo "::notice ::checking updated versions"
             set +e
             MESSAGE=$($ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }})
@@ -523,8 +525,8 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}"                        
+            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}" "${{ needs.parameters.outputs.release_train_build_version }}"                        
             echo "::notice ::checking updated versions"
             set +e
             MESSAGE=$($ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }})
@@ -620,8 +622,8 @@ jobs:
         run: |
           ROOT_DIR=$(realpath $PWD)
           pushd stream-applications >/dev/null
-            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}"                        
+            echo "::notice ::updating versions to ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.build_version }}" "${{ needs.parameters.outputs.release_train_build_version }}"                        
             echo "::notice ::checking updated versions"
             set +e
             MESSAGE=$($ROOT_DIR/check-versions-for-release.sh ${{ needs.parameters.outputs.build_version_type }})
@@ -666,8 +668,9 @@ jobs:
           pushd stream-applications > /dev/null
             git config user.name "GitHub Actions Bot"
             git config user.email "<>"
-            git commit -a -m "Release ${{ needs.parameters.outputs.build_version }}"
+            git commit -a -m "Release ${{ needs.parameters.outputs.build_version }} / ${{ needs.parameters.outputs.release_train_build_version }}"
             git tag "v${{ needs.parameters.outputs.build_version }}"
+            git tag "v${{ needs.parameters.outputs.release_train_build_version }}"
             git push --tags -v origin
           popd > /dev/null
       # add jfrog download
@@ -682,11 +685,11 @@ jobs:
           pushd stream-applications >/dev/null
             git config user.name "GitHub Actions Bot"
             git config user.email "<>"
-            echo "::notice ::updating next dev versions to ${{ needs.parameters.outputs.next_dev_version }}"
-            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.next_dev_version }}" 
-            echo "::notice ::setting released version to next dev version ${{ needs.parameters.outputs.next_dev_version }}"
+            echo "::notice ::updating next dev versions to ${{ needs.parameters.outputs.next_dev_version }} / ${{ needs.parameters.outputs.release_train_next_dev_version }}"
+            $ROOT_DIR/update-project-version.sh "${{ needs.parameters.outputs.next_dev_version }}" "${{ needs.parameters.outputs.release_train_next_dev_version }}"
+            echo "::notice ::setting released version to next dev version ${{ needs.parameters.outputs.next_dev_version }} / ${{ needs.parameters.outputs.release_train_next_dev_version }}"
             ./next-dev-version.sh
-            git commit -a -m "Next development version ${{ needs.parameters.outputs.next_dev_version }}"
+            git commit -a -m "Next development version ${{ needs.parameters.outputs.next_dev_version }} / ${{ needs.parameters.outputs.release_train_next_dev_version }}"
             git push -v origin 
           popd > /dev/null
   rerun-jobs:
