--- a/stream-applications-release-train/stream-applications-descriptor/pom.xml
+++ b/stream-applications-release-train/stream-applications-descriptor/pom.xml
@@ -4,7 +4,8 @@
     <parent>
         <artifactId>stream-applications-release-train</artifactId>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>2022.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
