--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -650,7 +650,7 @@
                 <repository>
                     <id>repo.spring.io</id>
                     <name>Spring Milestone Repository</name>
-                    <url>https://repo.spring.io/libs-milestone-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream Applications</url>
+                    <url>https://repo.spring.io/libs-milestone-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream+Applications</url>
                 </repository>
             </distributionManagement>
         </profile>
@@ -660,7 +660,7 @@
                 <snapshotRepository>
                     <id>repo.spring.io</id>
                     <name>Spring Snapshot Repository</name>
-                    <url>https://repo.spring.io/libs-snapshot-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream Applications</url>
+                    <url>https://repo.spring.io/libs-snapshot-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream+Applications</url>
                 </snapshotRepository>
             </distributionManagement>
         </profile>
@@ -670,7 +670,7 @@
             <repository>
                 <id>repo.spring.io</id>
                 <name>Spring Release Repository</name>
-                <url>https://repo.spring.io/libs-release-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream Applications</url>
+                <url>https://repo.spring.io/libs-release-local;zip.type=docs;zip.deployed=false;zip.name=stream-applications;zip.displayname;Stream+Applications</url>
             </repository>
         </distributionManagement>
         </profile>
