--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -603,6 +603,11 @@ jobs:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
           components: 'js'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: jfrog/setup-jfrog-cli@v3
+        env:
+          JF_URL: 'https://repo.spring.io'
+          JF_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
+          JF_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
       - name: 'Configure: cache for maven dependencies'
         uses: actions/cache@v3
         with:
@@ -649,10 +654,49 @@ jobs:
           pushd stream-applications > /dev/null
             echo "::notice ::building - stream-applications-release-train"
             set -e
-            $ROOT_DIR/build-folder.sh stream-applications-release-train "install deploy"
-            set +e
-            echo "::notice ::stream-applications-release-train build completed"
+            $ROOT_DIR/build-folder.sh stream-applications-release-train "install deploy"                                     
           popd > /dev/null
+      - name: Configure JFrog Cli for Snapshot
+        if: ${{ needs.parameters.outputs.build_version_type == 'snapshot' }}
+        run: |
+          jfrog rt mvnc \
+            --server-id-resolve=repo.spring.io \
+            --server-id-deploy=repo.spring.io \
+            --repo-resolve-releases=libs-milestone \
+            --repo-resolve-snapshots=libs-snapshot \
+            --repo-deploy-releases=libs-release-local \
+            --repo-deploy-snapshots=libs-snapshot-local
+          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
+          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
+      - name: Configure JFrog Cli for Milestone
+        if: ${{ needs.parameters.outputs.build_version_type == 'milestone' }}
+        run: |
+          jfrog rt mvnc \
+            --server-id-resolve=repo.spring.io \
+            --server-id-deploy=repo.spring.io \
+            --repo-resolve-releases=libs-milestone \
+            --repo-resolve-snapshots=libs-milestone \
+            --repo-deploy-releases=libs-milestone-local \
+            --repo-deploy-snapshots=libs-milestone-local
+          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
+          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
+      - name: Configure JFrog Cli for Milestone
+        if: ${{ needs.parameters.outputs.build_version_type == 'ga' }}
+        run: |
+          jfrog rt mvnc \
+            --server-id-resolve=repo.spring.io \
+            --server-id-deploy=repo.spring.io \
+            --repo-resolve-releases=libs-milestone \
+            --repo-resolve-snapshots=libs-snapshot \
+            --repo-deploy-releases=libs-release-local \
+            --repo-deploy-snapshots=libs-snapshot-local
+          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
+          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
+      - name: Set Stream Applications Docs Properties
+        run: |
+          set -e
+          ./set-doc-properties.sh ${{ needs.parameters.outputs.release_train_version }}
+          echo "::notice ::stream-applications-release-train build completed"
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
