--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -654,8 +654,9 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: 'https://repo.spring.io'
-          JF_USER: ${{ secrets.ARTIFACTORY_USERNAME }}
-          JF_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+          JF_ACCESS_TOKEN: '${{ secrets.ARTIFACTORY_PASSWORD }}'
+          JF_USER: '${{ secrets.ARTIFACTORY_USERNAME }}'
+          JF_PASSWORD: '${{ secrets.ARTIFACTORY_PASSWORD }}'
       - name: Configure JFrog Cli for Snapshot
         if: ${{ needs.parameters.outputs.build_version_type == 'snapshot' }}
         run: |
