--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -655,6 +655,8 @@ jobs:
             set -e
             $ROOT_DIR/build-folder.sh stream-applications-release-train "install deploy"                                     
           popd > /dev/null
+      - name: 'Configure: Install libxml2-utils'
+        uses: ./.github/actions/install-libxml2-utils
       - uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: 'https://repo.spring.io'
