--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -699,9 +699,7 @@ jobs:
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
       - name: Set Stream Applications Docs Properties for ${{ needs.parameters.outputs.release_train_version }}
         run: |
-          source ./set-doc-properties.sh "${{ needs.parameters.outputs.release_train_version }}"          
-          jfrog rt set-props --server-id repo.spring.io "$PATH" "$PROPS"
-          echo "Setting [$PROPS] on [$PATH]"
+          ./set-doc-properties.sh "${{ needs.parameters.outputs.release_train_version }}"                    
           echo "::notice ::stream-applications-release-train build completed"
       - name: 'Upload: Test Reports'
         if: ${{ always() }}
