--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -660,43 +660,9 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: 'https://repo.spring.io'
-          JF_ACCESS_TOKEN: '${{ secrets.JF_ARTIFACTORY_SPRING }}'
-      - name: Configure JFrog Cli for Snapshot
-        if: ${{ needs.parameters.outputs.build_version_type == 'snapshot' }}
-        run: |
-          jfrog mvnc \
-            --server-id-resolve=repo.spring.io \
-            --server-id-deploy=repo.spring.io \
-            --repo-resolve-releases=libs-milestone \
-            --repo-resolve-snapshots=libs-snapshot \
-            --repo-deploy-releases=libs-release-local \
-            --repo-deploy-snapshots=libs-snapshot-local
-          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
-          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
-      - name: Configure JFrog Cli for Milestone
-        if: ${{ needs.parameters.outputs.build_version_type == 'milestone' }}
-        run: |
-          jfrog mvnc \
-            --server-id-resolve=repo.spring.io \
-            --server-id-deploy=repo.spring.io \
-            --repo-resolve-releases=libs-milestone \
-            --repo-resolve-snapshots=libs-milestone \
-            --repo-deploy-releases=libs-milestone-local \
-            --repo-deploy-snapshots=libs-milestone-local
-          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
-          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
-      - name: Configure JFrog Cli for Milestone
-        if: ${{ needs.parameters.outputs.build_version_type == 'ga' }}
-        run: |
-          jfrog mvnc \
-            --server-id-resolve=repo.spring.io \
-            --server-id-deploy=repo.spring.io \
-            --repo-resolve-releases=libs-milestone \
-            --repo-resolve-snapshots=libs-snapshot \
-            --repo-deploy-releases=libs-release-local \
-            --repo-deploy-snapshots=libs-snapshot-local
-          echo JFROG_CLI_BUILD_NAME=stream-application-docs >> $GITHUB_ENV
-          echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
+          JF_ACCESS_TOKEN: '${{ secrets.ARTIFACTORY_PASSWORD }}'
+          JF_USER: '${{ secrets.ARTIFACTORY_USERNAME }}'
+          JF_PASSWORD: '${{ secrets.ARTIFACTORY_PASSWORD }}'
       - name: Set Stream Applications Docs Properties for ${{ needs.parameters.outputs.release_train_version }}
         run: |
           ./set-doc-properties.sh "${{ needs.parameters.outputs.release_train_version }}"                    
@@ -709,6 +675,9 @@ jobs:
           path: '**/target/surefire-reports'
           retention-days: 7
           if-no-files-found: ignore
+      # set all properties for buildName and buildNumber using a list of all built artifacts and version.
+      # use frog download of all builds.
+      # use nexus-sync
       - name: Tag Release
         if: ${{ needs.parameters.outputs.is_version_change == 'true' }}
         shell: bash
