--- a/applications/sink/s3-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/sink/s3-sink/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,2 +1,5 @@
 configuration-properties.classes=org.springframework.cloud.fn.consumer.s3.AwsS3ConsumerProperties,\
-  org.springframework.cloud.fn.common.aws.s3.AmazonS3Properties
+  io.awspring.cloud.autoconfigure.s3.properties.S3Properties,\
+  io.awspring.cloud.autoconfigure.s3.properties.S3CrtClientProperties, \
+  io.awspring.cloud.autoconfigure.core.CredentialsProperties,\
+  io.awspring.cloud.autoconfigure.core.RegionProperties
