--- a/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/source/s3-source/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,6 +1,8 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.s3.AwsS3SupplierProperties,\
   org.springframework.cloud.fn.common.file.FileConsumerProperties,\
-  org.springframework.cloud.fn.common.aws.s3.AmazonS3Properties, \
+  io.awspring.cloud.autoconfigure.s3.properties.S3Properties,\
+  io.awspring.cloud.autoconfigure.core.CredentialsProperties,\
+  io.awspring.cloud.autoconfigure.core.RegionProperties,\
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$Redis, \
   org.springframework.cloud.fn.common.metadata.store.MetadataStoreProperties$DynamoDb, \
