--- a/functions/common/aws-s3-common/pom.xml
+++ b/functions/common/aws-s3-common/pom.xml
@@ -11,12 +11,7 @@
 
     <artifactId>aws-s3-common</artifactId>
     <name>aws-s3-common</name>
-    <description>aws-s3 consumer</description>
-
-    <properties>
-        <spring-integration-aws.version>2.5.2</spring-integration-aws.version>
-        <spring-cloud-aws.version>2.4.2</spring-cloud-aws.version>
-    </properties>
+    <description>aws-s3 common</description>
 
     <dependencies>
         <dependency>
@@ -26,8 +21,12 @@
         </dependency>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
-            <artifactId>spring-cloud-starter-aws</artifactId>
-            <version>${spring-cloud-aws.version}</version>
+            <artifactId>spring-cloud-aws-starter-s3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awssdk.crt</groupId>
+            <artifactId>aws-crt</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.integration</groupId>
