--- a/functions/consumer/s3-consumer/pom.xml
+++ b/functions/consumer/s3-consumer/pom.xml
@@ -25,6 +25,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3-transfer-manager</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <scope>test</scope>
