--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -53,10 +53,9 @@
 
         <groovy.version>4.0.5</groovy.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
-        <aws-java-sdk.version>1.12.322</aws-java-sdk.version>
-        <spring-integration-aws.version>2.5.2</spring-integration-aws.version>
-        <spring-integration-hazelcast.version>3.0.0</spring-integration-hazelcast.version>
-        <curator.version>5.3.0</curator.version>
+        <spring-cloud-aws.version>3.0.1</spring-cloud-aws.version>
+        <spring-integration-aws.version>3.0.1</spring-integration-aws.version>
+        <curator.version>5.5.0</curator.version>
         <mavenThreads>1</mavenThreads>
     </properties>
 
@@ -108,6 +107,13 @@
                 <groupId>jakarta.jms</groupId>
                 <artifactId>jakarta.jms-api</artifactId>
                 <version>${jakarta-jms.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.awspring.cloud</groupId>
+                <artifactId>spring-cloud-aws-dependencies</artifactId>
+                <version>${spring-cloud-aws.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
