--- a/stream-applications-release-train/stream-applications-descriptor/pom.xml
+++ b/stream-applications-release-train/stream-applications-descriptor/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>stream-applications-descriptor</artifactId>
     <name>stream-applications-descriptor</name>
+    <version>2022.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <uniqueVersion>false</uniqueVersion>
