--- a/stream-applications-release-train/stream-applications-docs/pom.xml
+++ b/stream-applications-release-train/stream-applications-docs/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>stream-applications-docs</artifactId>
-    <name>stream-applications-docs</name>
-    <description>Stream Apps Docs</description>
+
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-release-train</artifactId>
         <version>2022.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-
+    <artifactId>stream-applications-docs</artifactId>
+    <name>stream-applications-docs</name>
+    <description>Stream Apps Docs</description>
+    <version>2022.0.0-SNAPSHOT</version>
     <properties>
         <docs.resources.version>0.2.5</docs.resources.version>
         <rootDir>${basedir}/../..</rootDir>
