--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -51,7 +51,8 @@
         <testcontainers.version>1.18.3</testcontainers.version>
         <mockserver.version>5.13.2</mockserver.version>
 
-        <groovy.version>4.0.5</groovy.version>
+        <groovy.version>4.0.14</groovy.version>
+        <apache-ivy.version>2.5.2</apache-ivy.version>
         <jakarta-jms.version>3.1.0</jakarta-jms.version>
         <spring-cloud-aws.version>3.0.1</spring-cloud-aws.version>
         <spring-integration-aws.version>3.0.1</spring-integration-aws.version>
@@ -114,6 +115,11 @@
                 <groupId>jakarta.jms</groupId>
                 <artifactId>jakarta.jms-api</artifactId>
                 <version>${jakarta-jms.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ivy</groupId>
+                <artifactId>ivy</artifactId>
+                <version>${apache-ivy.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.awspring.cloud</groupId>
