--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -19,7 +19,10 @@ jobs:
         working-directory: spring-cloud-dataflow-apps-plugin
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-java@v3
+        - uses: actions/setup-java@v3
+          with:
+            java-version: 17
+            distribution: temurin
     - uses: jvalkeal/setup-maven@v1
       with:
         maven-version: 3.8.8
