--- a/.github/workflows/apps-plugin-snapshot.yml
+++ b/.github/workflows/apps-plugin-snapshot.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
       - uses: jvalkeal/setup-maven@v1
         with:
           maven-version: 3.8.8
