[CI] Unique job names in Apps plugin workflows

--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -11,7 +11,7 @@ env:
   MAVEN_THREADS: '-T 0.5C'
 
 jobs:
-  build:
+  build_deploy_milestone:
     if: ${{ github.repository == 'spring-cloud/stream-applications' }}
     runs-on: ubuntu-latest
     defaults:
