[CI] Add output buildname/number to Apps Plugin workflows

--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -57,7 +57,7 @@ jobs:
             -DprocessAllModules=true \
             -DgenerateBackupPoms=false \
             -Dartifactory.publish.artifacts=false \
-            -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-'${milestoneVersion} \
+            -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-'${inputs.milestoneVersion} \
             -B
           jfrog rt build-clean
           jfrog rt mvn -gs settings.xml -Pstagingmilestone,full,deploymentfiles -B install -DskipTests
@@ -69,6 +69,13 @@ jobs:
           tag-release-branch: apps-plugin/v${{ env.spring_cloud_dataflow_apps_plugin_version }}
           tag-release-tag: ${{ env.spring_cloud_dataflow_apps_plugin_version }}
           tag-release-tag-prefix: apps-plugin/v
+      - name: Promote Build
+        run: |
+          jfrog rt build-promote $JFROG_CLI_BUILD_NAME $JFROG_CLI_BUILD_NUMBER libs-milestone-local
       - name: Clean cache
         run: |
           find ~/.m2/repository -type d -name '*SNAPSHOT' | xargs rm -fr
+      - name: Print Build Info
+        run: |
+          echo "::notice ::JFROG_CLI_BUILD_NAME=$JFROG_CLI_BUILD_NAME"
+          echo "::notice ::JFROG_CLI_BUILD_NUMBER=$JFROG_CLI_BUILD_NUMBER"
