--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -57,7 +57,7 @@ jobs:
             -DprocessAllModules=true \
             -DgenerateBackupPoms=false \
             -Dartifactory.publish.artifacts=false \
-            -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-'${inputs.milestoneVersion} \
+            -DnewVersion='${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-'${{inputs.milestoneVersion}} \
             -B
           jfrog rt build-clean
           jfrog rt mvn -gs settings.xml -Pstagingmilestone,full,deploymentfiles -B install -DskipTests
