[CI] Remove '-' from milestone version for apps plugin

--- a/.github/workflows/apps-plugin-milestone.yml
+++ b/.github/workflows/apps-plugin-milestone.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       milestoneVersion:
-        description: "Milestone version (ex: '-M1')"
+        description: "Milestone version (no dash, eg. 'M1')"
         required: true
 
 env:
